# my-gym

./: .claudeignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPENDENCY_UPGRADES.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SCOPE.md  Program_Engine_Improvement_Proposal.md  README.md  TEST_COVERAGE.md  TOKEN_OPTIMIZATION_REPORT.md  docker-compose.yml
backend/: .coverage  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 078b67ea30c8_add_program_tables.py  1e522e5820b9_create_workout_logging_tables.py  207a071d1a2a_add_goal_weights_to_user_profiles.py  542417adc2ef_add_effort_method_to_workout_set_logs.py  60d03a08cac2_add_provocation_tags_to_exercises.py  97445f694ec7_add_injury_records.py  (+11 more)
backend/app/: main.py
backend/data/: rpe_calibration.json
backend/scripts/: calibrate_score.py  lint_library.py  train_rank_weights.py
backend/tests/: conftest.py  test_adaptation.py  test_assembly.py  test_auth.py  test_calibrate_score.py  test_checkin.py  test_complementation.py  test_drafting.py  test_effort_method.py  test_engine_config.py  test_exercise_classification.py  test_exercise_model.py  test_exercise_schema.py  test_exercises.py  test_explain.py  test_injuries.py  test_ledger.py  test_library_lint.py  test_logging.py  test_main.py  test_matching.py  test_onboarding_flow.py  test_preferences.py  test_preview.py  test_program_api_schemas.py  test_program_models.py  test_programs_flow.py  test_programs_progression_style.py  test_programs_stub.py  test_progression_deload.py  test_progression_double.py  test_progression_linear.py  test_progression_registry.py  test_progression_undulating.py  test_ramp_guard.py  test_regression_graphs.py  test_seed_templates.py  test_selection.py  test_style_override.py  test_taxonomy.py  (+9 more)
(+341 files in other folders)
