[project]
name = "my-gym"
version = "0.1.0"
description = "Personalized workout program manager"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.2",
    "uvicorn>=0.32.1",
    "sqlalchemy>=2.0.37",
    "sqlalchemy[asyncio]>=2.0.37",
    "alembic>=1.14.1",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.4.0",
    "pydantic[email]>=2.10.4",
    "python-dotenv>=1.0.1",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "pyjwt>=2.10.1",
    "aiosqlite>=0.20.0",
    "aiopg>=1.4.0",
    "asyncpg>=0.31.0",
    "pre-commit>=4.0.1",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
    "black==24.10.0",
    "ruff==0.9.0",
    "mypy==1.14.1",
    "types-python-jose==3.5.0.20260408",
    "types-passlib==1.7.7.20250516",
    "types-pyjwt==1.7.1",
    "pre-commit==4.0.1",
]

[tool.black]
line-length = 120
target-version = ['py313']

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "passlib.*",
    "jose.*",
    "aiopg.*",
    "aiosqlite.*",
]
ignore_missing_imports = true
disallow_untyped_imports = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--strict-markers"
